@@ -112,7 +112,6 @@ static void Extrae_callback_routine_do_nothing (void)
 static unsigned (*get_task_num) (void) = xtr_set_taskid;
 static unsigned (*get_num_tasks) (void) = xtr_get_num_tasks;
 static void (*barrier_tasks) (void) = Extrae_callback_routine_do_nothing;
-static void (*finalize_task) (void) = Extrae_callback_routine_do_nothing;
 
 void Extrae_set_taskid_function (unsigned (*taskid_function)(void))
 {
@@ -127,11 +126,6 @@ void Extrae_set_numtasks_function (unsigned (*numtasks_function)(void))
 void Extrae_set_barrier_tasks_function (void (*barriertasks_function)(void))
 {
 	barrier_tasks = barriertasks_function;
-}
-
-void Extrae_set_finalize_task_function (void (*finalizetask_function)(void))
-{
-	finalize_task = finalizetask_function;
 }
 
 /* Internal routines */
@@ -149,11 +143,6 @@ unsigned Extrae_get_num_tasks (void)
 void Extrae_barrier_tasks (void)
 {
 	barrier_tasks();
-}
-
-void Extrae_finalize_task (void)
-{
-	finalize_task();
 }
 
 /******************************************************************************
